# corona-forecast-hamburg

./: README.md  corona.ipynb  pyproject.toml
data/: 2020_DE_Region_Mobility_Report.csv  SOURCES.md  d-inzidenz-zum-download-service.xlsx
data/klarchiv_01975_daily_akt/: Metadaten_Geraete_Luftdruck_Stationshoehe_01975.html  Metadaten_Geraete_Luftdruck_Stationshoehe_01975.txt  Metadaten_Geraete_Lufttemp_Am_Erdb_Minimum_01975.html  Metadaten_Geraete_Lufttemp_Am_Erdb_Minimum_01975.txt  Metadaten_Geraete_Lufttemperatur_01975.html  Metadaten_Geraete_Lufttemperatur_01975.txt  Metadaten_Geraete_Lufttemperatur_Maximum_01975.html  Metadaten_Geraete_Lufttemperatur_Maximum_01975.txt  Metadaten_Geraete_Lufttemperatur_Minimum_01975.html  Metadaten_Geraete_Lufttemperatur_Minimum_01975.txt  Metadaten_Geraete_Niederschlagshoehe_01975.html  Metadaten_Geraete_Niederschlagshoehe_01975.txt  Metadaten_Geraete_Niederschlagshoehe_Ind_01975.html  Metadaten_Geraete_Niederschlagshoehe_Ind_01975.txt  Metadaten_Geraete_Rel_Feuchte_01975.html  Metadaten_Geraete_Rel_Feuchte_01975.txt  Metadaten_Geraete_Schneehoehe_01975.html  Metadaten_Geraete_Schneehoehe_01975.txt  Metadaten_Geraete_Sonnenscheindauer_01975.html  Metadaten_Geraete_Sonnenscheindauer_01975.txt  Metadaten_Geraete_Windgeschwindigkeit_01975.html  Metadaten_Geraete_Windgeschwindigkeit_01975.txt  Metadaten_Geraete_Windspitze_Maximum_01975.html  Metadaten_Geraete_Windspitze_Maximum_01975.txt  Metadaten_Parameter_klima_tag_01975.html  Metadaten_Parameter_klima_tag_01975.txt  produkt_klima_tag_20190904_20210306_01975.txt
(+27 files in other folders)
