[tool.poetry]
name = "corona-prognose"
version = "0.1.0"
description = ""
authors = ["Johannes Gehrs <johannes.gehrs@moia.io>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.2"
jirafs-matplotlib = "^1.0.3"
jupyterlab = "^3.0.9"
xlrd = "^2.0.1"
openpyxl = "^3.0.6"
matplotlib = "^3.3.4"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
